--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/platform-browser-dynamic": "^13.2.0",
     "@angular/router": "^13.2.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@popperjs/core": "^2.11.5",
     "bluebird": "~3.7.2",
     "core-js": "^3.23.2",
     "moment": "~2.29.3",
@@ -53,7 +54,7 @@
     "@types/jasmine": "^4.0.3",
     "@types/node": "^18.0.0",
     "codelyzer": "^6.0.2",
-    "cypress": "^10.1.0",
+    "cypress": "^9.6.0",
     "jasmine-core": "^4.2.0",
     "jasmine-reporters": "^2.5.0",
     "karma": "^6.4.0",
