--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sds-angular",
   "description": "A sample that uses Sequential Data Store in an Angular-based environment.",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "private": true,
   "author": "OSIsoft, LLC",
   "license": "Apache-2.0",
@@ -13,6 +13,7 @@
     "ng": "ng",
     "prestart": "echo WARNING: The web server used in this sample is intended for use in testing or debugging sample applications locally. It has not been reviewed for security issues.",
     "build": "ng build",
+    "update-packages": "npm i -g npm-check-updates && ncu -u && npm install --force && npm audit fix --force",
     "lint": "ng lint",
     "start": "ng serve",
     "cy:run": "cypress run --browser chrome --config video=false",
@@ -32,37 +33,37 @@
     "@angular/platform-browser": "^13.2.0",
     "@angular/platform-browser-dynamic": "^13.2.0",
     "@angular/router": "^13.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@popperjs/core": "^2.11.5",
     "bluebird": "~3.7.2",
-    "core-js": "^3.18.3",
-    "moment": "~2.29.1",
+    "core-js": "^3.23.2",
+    "moment": "~2.29.3",
     "oidc-client": "~1.11.5",
-    "puppeteer": "^13.6.0",
-    "rxjs": "^7.4.0",
+    "puppeteer": "^14.4.1",
+    "rxjs": "^7.5.5",
     "rxjs-compat": "~6.6.7",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.0",
     "@angular/cli": "^13.2.0",
     "@angular/compiler-cli": "^13.2.0",
     "@angular/language-service": "^13.2.0",
-    "@cypress/schematic": "^1.6.0",
-    "@types/jasmine": "^3.10.0",
-    "@types/node": "^17.0.29",
-    "codelyzer": "^6.0.2",
+    "@cypress/schematic": "^2.0.0",
+    "@types/jasmine": "^4.0.3",
+    "@types/node": "^18.0.0",
     "cypress": "^9.6.0",
-    "jasmine-core": "^4.0.0",
+    "jasmine-core": "^4.2.0",
     "jasmine-reporters": "^2.5.0",
-    "karma": "^6.3.5",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "start-server-and-test": "^1.14.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.6.0"
   }
 }
