--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,15 +21,14 @@ resources:
   repositories:
     - repository: OpsGuildAutomationRepo
       type: git
-      name: Engineering/OpsGuild.Automation
+      name: DevOps/opsguild.automation
       ref: refs/heads/main
     - repository: templates
       type: github
-      name: osisoft/OSI-Samples
-      endpoint: osisoft/OSI-Samples
+      name: AVEVA/AVEVA-Samples
+      endpoint: AVEVA
 
 variables:
-  - template: '/miscellaneous/build_templates/variables.yml@templates'
   - name: analysisProject
     value: SDS_Angular
   - name: login
@@ -47,7 +46,7 @@ variables:
 
 parameters:
   - name: pool
-    default: 00-OSIManaged-Containers
+    default: DevOps Managed Containers Build
   - name: containerDemands
     type: object
     default: ['Agent.OS -equals Windows_NT']
